New version of service, standarized to use in all projects
