# controllers/TenantsService.js
@@ -1,7 +1,9 @@
 'use strict';
 
-var db =  require('../data');
-var namespacesRef = db.getRef('/namespaces');
+var database = require("../data");
+var TenantsModel = database.models.tenants;
+var config = require('../config');
+var logger = config.logger;
 
 exports.tenantsGET = function(args, res, next) {
   /**
@@ -10,40 +12,20 @@ exports.tenantsGET = function(args, res, next) {
   * keyValue (String)
   * namespace (String)
   **/
-    if(args.keyName.value && args.keyValue.value && args.namespace.value ){
-        var keyName = args.keyName.value;
-        var keyValue = args.keyValue.value;
-        var name = args.namespace.value;
+    var keyName = args.keyName.value;
+    var keyValue = args.keyValue.value;
 
-        var ref = db.getRef('/namespaces/' + name + '/tenants');
-        ref.once('value', function(tenants){
-            if(tenants.val()){
-                resolveTenantBy(keyName, keyValue, tenants.val(), (tenant) => {
-                    if(tenant){
-                        res.json(tenant);
-                    }else {
-                        res.status(404);
-                        res.json(new error(404, "Not Found tenant with these values"));
-                    }
-                }, (err) => {
-                    res.status(400);
-                    res.json(new error(400, err));
-                });
-            }else {
-                res.status(404);
-                res.json(new error(404, "Not found namespace with " + name));
-            }
-        });
+    logger.info("( tenantsGET ) GET tenant request: ");
 
-    }else {
-
-        var name = args.namespace.value;
-        var ref = db.getRef('/namespaces/' + name + '/tenants');
-        ref.once('value', function(tenants){
-            res.json(db.parseToArray(tenants.val()));
-        });
-
+    var query = {};
+    if(keyValue){
+        query [ "scope." + keyName ] = keyValue;
     }
+
+    logger.debug("mongodb query: " + JSON.stringify(query, null, 2));
+    TenantsModel.find(query, (err, result)=>{
+        res.json(result);
+    });
 
 }
 
@@ -52,45 +34,29 @@ exports.tenantsPOST = function(args, res, next) {
    * parameters expected in the args:
   * tenant (newTenant)
   **/
-  if(args.namespace.value && args.tenant.value.agreement){
-      var name = args.namespace.value;
-      var newTenant = args.tenant.value;
-      var ref = db.getRef('/namespaces/' + name + '/tenants' );
-      ref.once('value', function(snapshot){
-          var tenant = null;
-          for(var s in newTenant.scope){
-              if(s != "tenant")
-                tenant = resolveTenantBy(s, newTenant.scope[s], snapshot.val(), ()=>{}, ()=>{});
-              if(tenant != null) break;
-          }
-          if(tenant){
-              var tenantRef = db.getRef('/namespaces/' + name + '/tenants/' + tenant._id );
-              tenantRef.set(newTenant, (err)=>{
-                  if(!err){
-                      res.end();
-                  }else {
-                      res.status(500);
-                      res.json(new error(500, err));
-                  }
-              });
-          }else{
-              ref.push().set(newTenant, (err) => {
-                  if(!err){
-                      res.end();
-                  }else {
-                      res.status(500);
-                      res.json(new error(500, err));
-                  }
-              });
-          }
+  var newTenant = args.tenant.value;
+
+  logger.info("( tenantsPOST ) newTenant request: " + JSON.stringify(newTenant, null, 2));
+
+  var query = {};
+  for (var s in newTenant.scope){
+      query[ "scope." + s ] = newTenant.scope[s];
+  }
+
+  TenantsModel.findOne(query, (err, result) =>{
+      logger.debug("( tenantsPOST ) findOne info: " + JSON.stringify(result, null, 2));
+
+      if(err) return res.status(500).json(new error(500, err.toString()));
+
+      if(result) return res.status(400).json(new error(400, "Tenant with this information already exists"));
+
+      new TenantsModel(newTenant).save( (err, result)=>{
+          if( err ) return res.status(500).json(new error(500, err.toString()));
+
+          res.end();
       });
 
-  }else {
-
-      res.status(400);
-      res.json(new error(400, "Bad request, you need to pass namespace and newTenant"));
-
-  }
+  });
 
 }
 
@@ -100,55 +66,45 @@ exports.tenantsIdDELETE = function(args, res, next) {
   * id (string)
   * namespace (string)
   **/
-    if(args.id.value && args.namespace.value ){
-        var name = args.namespace.value;
-        var id = args.id.value;
-        var ref = db.getRef('/namespaces/' + name + '/tenants/' + id);
-        ref.remove((err)=>{
-            if(!err)
-                res.sendStatus(200);
-            else{
-                res.status(500);
-                res.json(new error(500, err));
-            }
-        });
-    }else {
-        res.status(400);
-        res.json(new error(400, "Bad request, you need to pass apikey or account in a query parameter"));
-    }
+  var tenantId = args.id.value;
+
+  logger.info("( tenantsIdDELETE ) delete tenant request: " + JSON.stringify(tenantId, null, 2));
+
+  TenantsModel.remove({_id: tenantId}, (err, result) =>{
+      if(err) return res.status(500).json(new error(500, err.toString()));
+
+      logger.debug("remove info: " + JSON.stringify(result, null, 2));
+
+      res.end();
+  });
 
 }
 
-function resolveTenantBy(keyName, keyValue, tenants, successCb, errorCb){
-    var tenant = null
-    try{
+exports.tenantsIdPUT = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * id (string)
+  * namespace (string)
+  **/
+  var tenantId = args.id.value;
+  var newTenant = args.tenant.value;
 
-        for(var t in tenants){
-            if(tenants[t].scope[keyName]){
-                if(tenants[t].scope[keyName] === keyValue ){
-                  tenants[t]._id = t;
-                  tenant = tenants[t];
-                  break;
-                }
-            }
-        }
-        if(tenant)
-          successCb(tenants[t]);
-        else {
-          successCb(null);
-        }
-    }catch(e){
-        errorCb(e.toString());
-    }
-    return tenant;
+  logger.info("( tenantsIdPUT ) update tenant request: " + JSON.stringify(tenantId, null, 2));
+
+  var query = {};
+  query["_id"] = tenantId;
+
+  TenantsModel.update(query, newTenant, {upsert: true, multi: true}, (err, result) =>{
+      if(err) return res.status(500).json(new error(500, err.toString()));
+
+      logger.debug("update info: " + JSON.stringify(result, null, 2));
+
+      res.end();
+  });
+
 }
 
 function error (code, message){
     this.code = code;
     this.message = message;
-}
-
-function tenant(sla, scope, requestedPayload){
-    this.sla = sla,
-    this.scope = scope;
 }
